--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
-    "watch" : "node-sass -w src/resource/scss/ -o src/public/css/",
+    "watch": "node-sass -w src/resource/scss/ -o src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/all4oneTu/nodejs_blog#readme",
   "dependencies": {
     "express": "^4.17.2",
-    "express-handlebars": "^5.1.0"
+    "express-handlebars": "^5.1.0",
+    "mongoose": "^6.1.3"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
