--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "express-handlebars": "^5.1.0",
-    "mongoose": "^6.1.3"
+    "mongoose": "^6.1.3",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
